# systemintegration2024

./: .gitignore
01_Misc/: getgooglehtml.sh  googleIndex.html  paymentiframe.html
01a_File_Formats_Bonanza/: FileReaderDotnet.sln
01a_File_Formats_Bonanza/FileReaderDotnet/: FileReaderDotnet.csproj  LoadPersonFrom.cs  Person.cs  Program.cs
01a_File_Formats_Bonanza/FileReaderTypescript/: package-lock.json  package.json
02_Data/: me.csv  me.json  me.xml  me.yaml
03_Modules/html_no_modules/: index.html
03a_Data_Parsing_Server_Pt2/: package-lock.json  package.json
04a_Server-sent_Events/: package-lock.json  package.json
04b_Database_granular_access/: TODO.txt  exposee documentation.txt  sample_data.json
05a_Webhooks/: API documentation.txt
06_Servers/node/: app.js
06_Servers/python/: main.py  pyproject.toml
06a_Websocket/: client.js
08a_Database_Documentation/: create-tables.sql  steps.md
08a_Document_a_Database/: master_mro_docs.html
08b_Database_Migration/: index.js  knexfile.js  migrateData.js  package-lock.json  package.json  readme.md
08c_Auth_Integration/: research-notes.txt  tutorial.md
09_Environment_Variables/python/: .env_template  main.py  pyproject.toml
09a_DLS_Code_Documentation/: links.md
10a_GraphQL/: query.md
16_CORS/: index.html
16_CORS/python-CORS/: main.py  pyproject.toml
17_Multipart-Forms/: .gitignore  index.html  nestedForms.html
18_Images/: base64.html
19_Audio/: index.html
20_MPEG_DASH/: app.js  youtubevideo.html
21_MYSQL_Backup/: backup.sql
27_Web_Scraping_Crawling/02_python_basic_web_scraper/: main.py  pyproject.toml
(+105 files in other folders)
