[tool.poetry]
name = "first-server"
version = "0.1.0"
description = ""
authors = ["Snaflus <cani0006@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
